Updated by task 'AutomatedMDTask_1669329763994_TM-MT_1669329866571'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/0e4d3f8df989561a3827ffe0f7730e9197779a67

--- a/help/tags/release-notes/2020.md
+++ b/help/tags/release-notes/2020.md
@@ -1,10 +1,11 @@
 ---
 title: Notas de versão de 2020
 description: Notas de versão de 2020 para tags no Adobe Experience Platform.
-source-git-commit: 5f810ada57eeb12a56de603d974a091b888dc9d2
+exl-id: 0c0b57b3-5583-47e6-b619-add92e934bba
+source-git-commit: 88939d674c0002590939004e0235d3da8b072118
 workflow-type: tm+mt
 source-wordcount: '1288'
-ht-degree: 85%
+ht-degree: 100%
 
 ---
 
@@ -39,7 +40,7 @@ ht-degree: 85%
 
 ### Recursos
 
-* **Permissões da plataforma:** ao configurar permissões de tags no  [Admin Console](https://adminconsole.adobe.com/), uma nova opção estará disponível para permitir ou restringir o acesso de acordo com o tipo de plataforma. Atualmente, os tipos de plataforma são &quot;Web&quot; e &quot;Mobile&quot;. Com essa alteração, os usuários não poderão criar, editar ou excluir pacotes de propriedades e extensões se não tiverem a permissão apropriada da plataforma. Por padrão, todos os usuários recebem acesso às duas plataformas.
+* **Permissões da Platform:** ao serem configuradas permissões de tag no [Admin Console](https://adminconsole.adobe.com/), há uma nova opção disponível para permitir ou restringir o acesso de acordo com o tipo de plataforma. Atualmente, os tipos de plataforma são &quot;Web&quot; e &quot;Mobile&quot;. Com essa alteração, os usuários não poderão criar, editar ou excluir pacotes de propriedades e extensões se não tiverem a permissão apropriada da plataforma. Por padrão, todos os usuários recebem acesso às duas plataformas.
 
 ### Correções de erros
 
@@ -49,8 +50,8 @@ ht-degree: 85%
 
 ### Recursos
 
-* **Sequência de componentes da regra:** marque a opção **[!UICONTROL Executar componentes da regra na sequência]** nas configurações de propriedade. Quando ativado, o tempo de execução da tag adiciona as condições e ações da regra a uma fila de processamento quando o evento da regra for acionado.  A fila é processada com base na metodologia FIFO, com tempos limite disponíveis em componentes individuais. Consulte a [página Rules](../ui/managing-resources/rules.md) para obter mais informações sobre configurações e informações disponíveis.
-* **Promessas no Core - Custom Code:** é possível fazer tarefas assíncronas nas caixas Core - Custom Code. Para fazer isso, você pode retornar uma Promessa do código personalizado JavaScript ou usar as novas funções `onCustomCodeSuccess()` e `onCustomCodeFailure()` no código personalizado HTML. Mais informações estão disponíveis no [documento de referência do Core Extension](../extensions/web/core/overview.md).
+* **Sequência de componentes da regra:** marque a opção **[!UICONTROL Executar componentes da regra na sequência]** nas configurações de propriedade. Quando habilitado, o tempo de execução da tag adiciona as condições e ações da regra a uma fila de processamento quando o evento é acionado.  A fila é processada com base na metodologia FIFO, com tempos limite disponíveis em componentes individuais. Consulte a [página Rules](../ui/managing-resources/rules.md) para obter mais informações sobre configurações e informações disponíveis.
+* **Promessas no Core - Custom Code:** é possível fazer tarefas assíncronas nas caixas Core - Custom Code. Para fazer isso, você pode retornar uma Promessa do código personalizado JavaScript ou usar as novas funções `onCustomCodeSuccess()` e `onCustomCodeFailure()` no código personalizado HTML. Mais informações estão disponíveis no [documento de referência do Core Extension](../extensions/client/core/overview.md).
 
 ## 18 de junho de 2020
 
@@ -82,7 +83,7 @@ ht-degree: 85%
 
 ### Correções de erros
 
-* Ao usar o Safari &lt;= v12, os usuários não conseguiam acessar a interface do usuário da coleta de dados devido a um cabeçalho `X-FRAME-OPTIONS` que estava sendo definido incorretamente.
+* Ao usar o Safari &lt;= v12, os usuários não conseguiam acessar a interface da coleção de dados devido a um cabeçalho `X-FRAME-OPTIONS` que estava sendo configurado de maneira incorreta.
 * As mensagens de notificação não eram exibidas com o formato correto no FireFox.
 
 ## 24 de abril de 2020
@@ -111,8 +112,8 @@ ht-degree: 85%
 
 ### Atualizações
 
-* A interface de usuário de logon e de logout da coleta de dados foi significativamente melhorada. A alternância entre tags e outros produtos do Adobe agora também é muito mais tranquila. Finalmente, se você tem uma única conta com direitos para várias empresas, isso também é drasticamente melhorado.
-* A estrutura dos URLs de tags agora é mais consistente com outros produtos do Adobe. O novo formato de URL substitui `https://launch.adobe.com` por `https://experience.adobe.com/#/@companyID/launch/`. Os URLs antigos são redirecionados para os novos, mas você deve atualizar seus marcadores para economizar alguns segundos toda vez que acessar a interface do usuário da coleta de dados.
+* A interface de logon e de logout da interface da coleção de dados foi significativamente melhorada. Agora também se tornou muito mais simples alternar entre tags e outros produtos da Adobe. Finalmente, se você tem uma única conta com direitos para várias empresas, isso também é drasticamente melhorado.
+* Agora a estrutura dos URLs de tags é mais consistente com outros produtos da Adobe. O novo formato de URL substitui `https://launch.adobe.com` por `https://experience.adobe.com/#/@companyID/launch/`. Os URLs antigos redirecionam para os novos, mas atualize seus favoritos para economizar alguns segundos sempre que acessar a interface da coleção de dados.
 
 ## 19 de fevereiro de 2020
 
@@ -132,7 +133,7 @@ ht-degree: 85%
 
 ### Correções de erros
 
-* O recurso de republicação da biblioteca às vezes não limpa as tags do ativo no Akamai corretamente e faz com que a biblioteca original continue sendo disponibilizada.
+* O recurso de republicação da biblioteca às vezes não limpa o ativo de tags no Akamai corretamente e faz com que a biblioteca original continue sendo disponibilizada.
 
 ### Recursos
 
