Updated by task 'AutomatedMDTask_1673467914744_TM-MT_1673468008437'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/846cb96e06d0020eb6c30f48b72b02642736cbef

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -2,9 +2,9 @@
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 para o Adobe Experience Platform.
 exl-id: e34751dc-3a83-4b34-b5f4-0379abaaf177
-source-git-commit: 34e0381d40f884cd92157d08385d889b1739845f
+source-git-commit: edd285c3d0638b606876c015dffb18309887dfb5
 workflow-type: tm+mt
-source-wordcount: '2437'
+source-wordcount: '2408'
 ht-degree: 4%
 
 ---
@@ -154,13 +154,12 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 | Grupo de campos | [[!UICONTROL Acionadores relativos]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/relative-triggers.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] e [!UICONTROL Tempo] classes, usadas para capturar acionadores relativos que aproveitam as condições meteorológicas conhecidas para impulsionar o comportamento do consumidor. |
 | Grupo de campos | [[!UICONTROL Acionadores graves]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/severe-triggers.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] e [!UICONTROL Tempo] classes, usadas para capturar acionadores que aproveitam condições meteorológicas graves conhecidas por impulsionar o comportamento do consumidor. |
 | Grupo de campos | [[!UICONTROL Acionadores do tempo]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/weather-triggers.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] e [!UICONTROL Tempo] classes, usadas para capturar acionadores gerais que aproveitam as condições meteorológicas conhecidas para impulsionar o comportamento do consumidor. |
-| Grupo de campos | [[!UICONTROL Detalhes da interação com MediaCollection]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/experienceevent-media-collection.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] classe que captura detalhes sobre uma interação de mídia. |
-| Grupo de campos | [[!UICONTROL Detalhes da interação com o MediaReporting]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/experienceevent-media-reporting.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] classe que captura detalhes sobre uma interação com relatórios de mídia. |
+| Grupo de campos | [[!UICONTROL Detalhes da interação de mídia]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/experienceevent-media.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] classe que captura detalhes sobre uma interação de mídia. |
+| Grupo de campos | [[!UICONTROL Detalhes da interação do MediaAnalytics]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/experienceevent-media-analytics.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] classe que captura detalhes sobre uma interação com relatórios de mídia. |
 | Tipo de dados | [[!UICONTROL Informações de detalhes de publicidade]](https://github.com/adobe/xdm/blob/master/components/datatypes/advertisingdetails.schema.json) | Captura detalhes sobre um ativo de anúncio. |
 | Tipo de dados | [[!UICONTROL Informações de detalhes do pod de publicidade]](https://github.com/adobe/xdm/blob/master/components/datatypes/advertisingpoddetails.schema.json) | Captura detalhes sobre um pod de publicidade, que é uma sequência de vários anúncios reproduzidos de um único ad break. |
 | Tipo de dados | [[!UICONTROL Informações de detalhes do capítulo]](https://github.com/adobe/xdm/blob/master/components/datatypes/chapterdetails.schema.json) | Captura detalhes sobre um capítulo ou segmento em um conteúdo de vídeo. |
 | Tipo de dados | [[!UICONTROL Informações de detalhes do erro]](https://github.com/adobe/xdm/blob/master/components/datatypes/errordetails.schema.json) | Captura detalhes sobre um erro de reprodução de vídeo. |
-| Tipo de dados | [[!UICONTROL Informações sobre detalhes do evento do player]](https://github.com/adobe/xdm/blob/master/components/datatypes/playereventdetails.schema.json) | Captura detalhes relacionados ao evento sobre um reprodutor de vídeo, incluindo a posição do indicador de reprodução e a ID da sessão. |
 | Tipo de dados | [[!UICONTROL Informações de dados do estado do player]](https://github.com/adobe/xdm/blob/master/components/datatypes/playerstatedata.schema.json) | Captura detalhes relacionados ao estado sobre um reprodutor de vídeo. |
 | Tipo de dados | [[!UICONTROL Informações de detalhes de dados de Qoe]](https://github.com/adobe/xdm/blob/master/components/datatypes/qoedatadetails.schema.json) | Captura detalhes de qualidade da experiência (QoE) sobre um evento de reprodução de vídeo. |
 | Tipo de dados | [[!UICONTROL Informações de detalhes da sessão]](https://github.com/adobe/xdm/blob/master/components/datatypes/sessiondetails.schema.json) | Captura detalhes da sessão sobre um evento de reprodução de vídeo. |
