Updated by task 'AutomatedMDTask_1679604148586_TM-MT_1679604259470'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/d7ecc59312d3fcc4adbe76e3635378da4fcd575a

--- a/help/tags/release-notes/2020.md
+++ b/help/tags/release-notes/2020.md
@@ -2,10 +2,10 @@
 title: Notas de versão de 2020
 description: Notas de versão de 2020 para tags no Adobe Experience Platform.
 exl-id: 0c0b57b3-5583-47e6-b619-add92e934bba
-source-git-commit: 88939d674c0002590939004e0235d3da8b072118
+source-git-commit: 60d88be5d710314cdc6900f4b63643c740b91fa6
 workflow-type: tm+mt
-source-wordcount: '1288'
-ht-degree: 100%
+source-wordcount: '1266'
+ht-degree: 98%
 
 ---
 
@@ -44,7 +44,7 @@ ht-degree: 100%
 
 ### Correções de erros
 
-* Um desenvolvedor de extensão poderia descontinuar um pacote de extensão que estava em desenvolvimento, criando um problema em que o desenvolvedor não pode mais fazer POST ou PATCH em novas versões do pacote de extensão. Esse problema foi resolvido com a remoção da capacidade de descontinuar os pacotes de extensão em desenvolvimento. Consulte [Descontinuar um ExtensionPackage](https://developer.adobelaunch.com/api/reference/1.0/extension_packages/discontinue/) para obter mais informações.
+* Um desenvolvedor de extensão poderia descontinuar um pacote de extensão que estava em desenvolvimento, criando um problema em que o desenvolvedor não pode mais fazer POST ou PATCH em novas versões do pacote de extensão. Esse problema foi resolvido com a remoção da capacidade de descontinuar os pacotes de extensão em desenvolvimento. Consulte [Descontinuar um ExtensionPackage](../api/endpoints/extension-packages.md#discontinue) para obter mais informações.
 
 ## 7 de julho de 2020
 
@@ -59,7 +59,7 @@ ht-degree: 100%
 
 * **Navegação no painel esquerdo:** as páginas principais do seu trabalho diário dentro de uma propriedade estão se movendo do nome da propriedade para um painel à esquerda que pode ser recolhido. Elas agora também são organizadas em alguns grupos lógicos com base na intenção e nos padrões de uso.
 * **Navegação estrutural no aplicativo:** as navegações estruturais foram adicionadas em todo o aplicativo. Agora, você sempre deve ter contexto, independentemente da tela que estiver olhando. Inclui mostrar nomes de regras ao modificar componentes, informando como você tem quatro níveis na tela de comparação que está vendo, e algumas outras coisas. A parte superior da tela foi reorganizada para maximizar a quantidade de espaço na tela que você tem para suas tarefas diárias. Você deve encontrar tudo o que está procurando com facilidade.
-* **Um novo endpoint foi adicionado:** `{{extension_package_id}}/versions` permite que os usuários da API vejam todas as versões de pacotes de extensão que são públicas. Os usuários da API também podem ver informações de versão para pacotes de extensão que estão em desenvolvimento ou privados para organizações às quais pertencem. Consulte [https://developer.adobelaunch.com/api/reference/1.0/extension_packages/](https://developer.adobelaunch.com/api/reference/1.0/extension_packages/)
+* **Um novo endpoint foi adicionado:** `{{extension_package_id}}/versions` permite que os usuários da API vejam todas as versões de pacotes de extensão que são públicas. Os usuários da API também podem ver informações de versão para pacotes de extensão que estão em desenvolvimento ou privados para organizações às quais pertencem. Consulte [https://experienceleague.adobe.com/docs/experience-platform/tags/api/endpoints/extension-packages.html](../api/endpoints/extension-packages.md#list-the-versions-for-an-extension-package)
 
 ### Correções de erros
 
@@ -77,7 +77,7 @@ ht-degree: 100%
 
 ### Recursos
 
-* **Descontinuar pacotes de extensão:** os desenvolvedores de extensão agora podem descontinuar seus pacotes de extensão. Um pacote de extensão descontinuado não está mais disponível para novas instalações do catálogo de tags. No entanto, as instalações existentes continuam a funcionar como esperado. Consulte [Descontinuar um ExtensionPackage](https://developer.adobelaunch.com/api/reference/1.0/extension_packages/discontinue/) nos documentos do desenvolvedor para obter mais detalhes.
+* **Descontinuar pacotes de extensão:** os desenvolvedores de extensão agora podem descontinuar seus pacotes de extensão. Um pacote de extensão descontinuado não está mais disponível para novas instalações do catálogo de tags. No entanto, as instalações existentes continuam a funcionar como esperado. Consulte [Descontinuar um ExtensionPackage](../api/endpoints/extension-packages.md#discontinue) nos documentos do desenvolvedor para obter mais detalhes.
 
 ## 9 de maio de 2020
 
@@ -106,7 +106,7 @@ ht-degree: 100%
 
 ### Recursos
 
-* Quando um componente de regra (evento, condição ou ação) é atualizado, o atributo `updated_at` para a regra à qual pertence também é atualizado. Isso reflete com mais precisão que o comportamento da regra foi alterado ao modificar um ou mais de seus componentes. Se você usar retornos de chamada para regras, você verá um aumento nos retornos de chamada da regra `updated_at`. Consulte [https://developer.adobelaunch.com/api/reference/1.0/rule_components/](https://developer.adobelaunch.com/api/reference/1.0/rule_components/) para obter mais informações.
+* Quando um componente de regra (evento, condição ou ação) é atualizado, o atributo `updated_at` para a regra à qual pertence também é atualizado. Isso reflete com mais precisão que o comportamento da regra foi alterado ao modificar um ou mais de seus componentes. Se você usar retornos de chamada para regras, você verá um aumento nos retornos de chamada da regra `updated_at`. Consulte [https://experienceleague.adobe.com/docs/experience-platform/tags/api/endpoints/rule-components.html](../api/endpoints/rule-components.md) para obter mais informações.
 
 ## 3 de março de 2020
 
