Updated by task 'AutomatedMDTask_1684243535137_TM-MT_1684243689818'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/e51149cbc2eb9828a4ed0b01cd3c1c8a11c94f4c

--- a/help/release-notes/2022/june-2022.md
+++ b/help/release-notes/2022/june-2022.md
@@ -2,7 +2,7 @@
 title: Notas de versão da Adobe Experience Platform de junho de 2022
 description: As notas de versão de junho de 2022 para o Adobe Experience Platform.
 exl-id: 44f5ca11-f5c0-4e86-98b2-9564e3a5ca3d
-source-git-commit: fcd44aef026c1049ccdfe5896e6199d32b4d1114
+source-git-commit: 7c1d956e3b6a1314baa13fef823d73d42404516a
 workflow-type: tm+mt
 source-wordcount: '1845'
 ht-degree: 4%
@@ -45,8 +45,8 @@ Para obter informações mais gerais sobre o Data Science Workspace, consulte o 
 
 | Recurso | Descrição |
 | ----------- | ----------- |
-| Suporte ao Destination SDK (Beta) para [[!DNL Google Cloud Storage]](../../destinations/destination-sdk/server-and-file-configuration.md#gcs-example) destinos com base em arquivo e [nomes de arquivo configuráveis](../../destinations/destination-sdk/file-based-destination-configuration.md#file-name-configuration). | Agora você pode usar o Destination SDK para criar destinos de armazenamento da Google Cloud e definir nomes de arquivo personalizados para arquivos exportados, por meio de macros de nome de arquivo. <br><br> No momento, o suporte ao destino baseado em arquivo no Adobe Experience Platform Destination SDK está na versão beta. A documentação e a funcionalidade estão sujeitas a alterações. |
-| A coluna Segmento no fluxo de dados é executada para destinos em lote | Para que o fluxo de dados seja executado para destinos em lote, a interface do usuário agora exibe o nome do segmento associado a cada execução do fluxo de dados. Leia mais sobre [o fluxo de dados é executado para destinos em lote](/help/dataflows/ui/monitor-destinations.md#dataflow-runs-for-batch-destinations). |
+| Suporte ao Destination SDK (Beta) para [[!DNL Google Cloud Storage]](../../destinations/destination-sdk/functionality/destination-server/server-specs.md#gcs-example) destinos com base em arquivo e [nomes de arquivo configuráveis](../../destinations/destination-sdk/functionality/destination-configuration/batch-configuration.md#file-name-configuration). | Agora você pode usar o Destination SDK para criar destinos de armazenamento da Google Cloud e definir nomes de arquivo personalizados para arquivos exportados, por meio de macros de nome de arquivo. <br><br> No momento, o suporte ao destino baseado em arquivo no Adobe Experience Platform Destination SDK está na versão beta. A documentação e a funcionalidade estão sujeitas a alterações. |
+| A coluna Segmento no fluxo de dados é executada para destinos em lote | Para que o fluxo de dados seja executado para destinos em lote, a interface do usuário agora exibe o nome do segmento associado a cada execução do fluxo de dados. Leia mais sobre [o fluxo de dados é executado para destinos em lote](../../dataflows/ui/monitor-destinations.md#dataflow-runs-for-batch-destinations). |
 
 {style="table-layout:auto"}
 
