Updated by task 'AutomatedMDTask_1684792020537_TM-MT_1684792135899'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/c5b1e7b1410b0049c8b361b40ab16c6f9d25adcd

--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,13 +1,48 @@
 ---
 title: Notas de versão da Adobe Experience Platform de maio de 2023
-description: As notas de versão de maio de 2023 para o Adobe Experience Platform.
-source-git-commit: b4a9e539c2a09b7789898870c0cdaf06a6e36b70
+description: As notas de versão de maio de 2023 para Adobe Experience Platform.
+source-git-commit: 8778f20b867d8abfe07fed8e681de26d1e9e90b8
 workflow-type: tm+mt
-source-wordcount: '22'
-ht-degree: 36%
+source-wordcount: '543'
+ht-degree: 3%
 
 ---
 
 # Notas de versão da Adobe Experience Platform
 
-**Data de lançamento: 26 de abril de 2023**
+**Data de lançamento: 24 de maio de 2023**
+
+- [Assimilação de dados]
+- [Fontes]
+
+## Assimilação de dados {#ingestion}
+
+O Adobe Experience Platform fornece um conjunto avançado de recursos para assimilar qualquer tipo e qualquer latência de dados. Você pode assimilar usando APIs de lote ou transmissão, usando fontes construídas em Adobe, parceiros de integração de dados ou a interface do usuário do Adobe Experience Platform.
+
+| Recurso | Descrição |
+| --- | --- |
+| Disponibilidade beta de modelos de assimilação de dados | Os modelos de assimilação de dados fornecem aos arquitetos e engenheiros de dados modelos padrão e ferramentas de automação para acelerar o processo de assimilação de dados, incluindo a criação de esquemas e conjuntos de dados e a configuração de regras de mapeamento. Os modelos de assimilação de dados estão disponíveis para o [[!DNL Marketo Engage]](../../sources/connectors/adobe-applications/marketo/marketo.md), [[!DNL Salesforce]](../../sources/connectors/crm/salesforce.md) e [[!DNL Microsoft Dynamics]](../../sources/connectors/crm/ms-dynamics.md) fontes. Para obter mais informações, leia o guia em [uso de modelos na interface](../../sources/tutorials/ui/templates.md). |
+
+Para obter mais informações, leia a [Visão geral da assimilação de dados](../../ingestion/home.md).
+
+## Fontes {#sources}
+
+O Adobe Experience Platform pode assimilar dados de fontes externas e permite estruturar, rotular e aprimorar esses dados usando os serviços da plataforma. Você pode assimilar dados de várias fontes, como aplicativos Adobe, armazenamento baseado em nuvem, software de terceiros e seu sistema de CRM.
+
+O Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir tempos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
+
+**Recursos atualizados**
+
+| Recurso | Descrição |
+| --- | --- |
+| Suporte de API para transmissão de dados de um [!DNL Snowflake] banco de dados | Agora é possível transmitir dados de um [[!DNL Snowflake] origem](../../sources/connectors/databases/snowflake.md) usando o [!DNL Flow Service] API. |
+| Suporte à API ampliada para modo de rascunho | Agora você pode pausar e salvar seu progresso durante o workflow de origens ao usar o [!DNL Flow Service] a qualquer momento. Use o `mode=draft` estado para salvar suas conexões base, de origem e de destino como rascunhos. Todas as entidades de rascunho podem ser revisitadas para conclusão posteriormente. Leia o guia em [configuração do [!DNL Flow Service] entidades para um estado de rascunho](../../sources/tutorials/api/draft.md) para obter mais informações. |
+| Disponibilidade geral do [!DNL Salesforce Marketing Cloud] origem | A variável [[!DNL Salesforce Marketing Cloud source] agora está em disponibilidade geral](../../sources/connectors/marketing-automation/salesforce-marketing-cloud.md). Use esta fonte para trazer seus [!DNL Salesforce Marketing Cloud] dados para Experience Platform. |
+| [!DNL Google Ads] atualizações de autenticação | Agora você pode fornecer uma ID de cliente de logon ao autenticar seu [!DNL Google Ads] conta de origem para buscar dados de relatório de um cliente operacional específico. Leia o [[!DNL Google Ads] documentação de origem](../../sources/connectors/advertising/ads.md) para obter mais informações. |
+| [!DNL Google PubSub] atualizações de autenticação | Agora você pode definir privilégios de acesso para o seu [!DNL Google PubSub] origem ao criar uma nova conta. Use a autenticação baseada em projeto para permitir o acesso no nível raiz ou use a autenticação baseada em assinatura e tópico para restringir o acesso a um tópico específico e fluxo de assinatura. Leia o [[!DNL Google PubSub] documentação de origem](../../sources/connectors/cloud-storage/google-pubsub.md) para obter mais informações. |
+| Novos parâmetros de campo de paginação para `type=PAGE` em Fontes de autoatendimento (SDK em lote) | Agora você pode usar `initialPageIndex` e `endPageIndex` ao integrar uma origem com `type=PAGE` por meio do SDK em lote. <ul><li>`initialPageIndex`: esse parâmetro permite definir o número de página a partir do qual a paginação começa. </li><li>`endPageIndex`: esse parâmetro permite estabelecer uma condição final e interromper a paginação.</li></ul> Para obter mais informações sobre esses novos parâmetros, leia a [Documentação do SDK em lote de fontes de autoatendimento](../../sources/sources-sdk/config/sourcespec.md#page). |
+| Suporte à interface do usuário para modo de rascunho | Agora é possível pausar e salvar seu progresso durante o workflow de origens por meio da interface do usuário. É possível selecionar **[!UICONTROL Salvar como rascunho]** durante as etapas de detalhe, mapeamento e agendamento do fluxo de dados do workflow para salvar seu fluxo de dados como rascunho para conclusão posterior. Leia o guia em [como salvar fluxos de dados como rascunhos na interface do usuário](../../sources/tutorials/ui/draft.md) para obter mais informações. |
+
+{style="table-layout:auto"}
+
+Para saber mais sobre fontes, leia o [visão geral das origens](../../sources/home.md).
