Updated by task 'AutomatedMDTask_1684950511242_TM-MT_1684950664437'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/ba77e61b91ab12b3dd943e30acb975f83a525e9e

--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,29 +1,93 @@
 ---
 title: Notas de versão da Adobe Experience Platform de maio de 2023
 description: As notas de versão de maio de 2023 para Adobe Experience Platform.
-source-git-commit: 8778f20b867d8abfe07fed8e681de26d1e9e90b8
+source-git-commit: 85401e3abfd7d5d1d84e082d20a1a064760c4e19
 workflow-type: tm+mt
-source-wordcount: '543'
-ht-degree: 3%
+source-wordcount: '1072'
+ht-degree: 4%
 
 ---
 
 # Notas de versão da Adobe Experience Platform
 
+>[!IMPORTANT]
+>
+>Em preparação para a disponibilidade geral do recurso Portal de público-alvo, o Adobe Experience Platform está atualizando o uso de &quot;públicos-alvo&quot; e &quot;segmentos&quot; no sistema e na documentação.
+>
+>- **Público**: um conjunto de pessoas, contas, famílias ou outras entidades que compartilham características e comportamentos comuns.
+>
+>- **Definição de segmento**: no Adobe Experience Platform, as regras usadas para descrever as principais características ou comportamento de um público-alvo. Esse termo era anteriormente conhecido como &quot;segmento&quot;.
+>
+>- **Segmento**: o ato de separar perfis em públicos. O termo &quot;segmento&quot; agora é usado exclusivamente como verbo.
+>
+>- **Segmentação**: o ato de identificar e articular as características dos perfis que serão agrupadas para produzir um conjunto de resultados, como uma audiência.
+>
+>Como resultado, na interface do usuário do Adobe Experience Platform, &quot;Segmentos&quot; é substituído por &quot;Públicos-alvo&quot; para refletir esse novo caminho de criação e gerenciamento de público-alvo.
+
 **Data de lançamento: 24 de maio de 2023**
 
-- [Assimilação de dados]
-- [Fontes]
+Atualizações dos recursos existentes na Adobe Experience Platform:
 
-## Assimilação de dados {#ingestion}
+- [Coleção de dados](#data-collection)
+- [Governança de dados](#data-governance)
+- [Assimilação de dados](#data-ingestion)
+- [Serviço de query](#query-service)
+- [Fontes](#sources)
+
+## Coleta de dados {#data-collection}
+
+A Adobe Experience Platform fornece um conjunto de tecnologias que permitem coletar dados de experiência do cliente do lado do cliente e enviá-los à Rede de borda da Adobe Experience Platform, onde eles podem ser enriquecidos, transformados e distribuídos para destinos Adobe ou não Adobe.
+
+**Recursos novos ou atualizados**
+
+| Recurso | Descrição |
+| --- | --- |
+| [!DNL Twitter] extensão da API de conversões | A variável [[!DNL Twitter] API de conversões](../../tags/extensions/server/twitter/overview.md) a extensão de encaminhamento de eventos permite encaminhar dados do evento do lado do servidor, em tempo real, para conversões de eventos usando o [!DNL Twitter] API de conversões. |
+| Assistência de caminho do elemento de dados | Determinar o caminho do elemento de dados na variável [Extensão principal](../../tags/extensions/client/core/overview.md) Agora está mais fácil do que nunca. Esse aprimoramento fornece um formulário guiado para ajudar você a selecionar e formatar o caminho de elemento de dados correto. |
+
+{style="table-layout:auto"}
+
+Para saber mais sobre coleções de dados, leia o [visão geral das coleções de dados](../../tags/home.md).
+
+## Governança de dados {#data-governance}
+
+O Adobe Experience Platform Data Governance é uma série de estratégias e tecnologias usadas para gerenciar dados de clientes e garantir conformidade com normas, restrições e políticas aplicáveis ao uso de dados. Ele desempenha um papel fundamental no Experience Platform em vários níveis, incluindo catalogação, linhagem de dados, rotulagem de uso de dados, políticas de acesso a dados e controle de acesso a dados para ações de marketing.
+
+**Novos recursos**
+
+| Recurso | Descrição |
+| --- | --- |
+| Descontinuação da rotulagem do nível de campo do conjunto de dados | A capacidade de aplicar rótulos a campos individuais foi movida de conjuntos de dados para esquemas. Isso permite centralizar o gerenciamento de rótulos de campo upstream para governança de dados, consentimento e controle de acesso. Os rótulos de campo do conjunto de dados aplicados anteriormente terão suporte temporário por meio da interface do usuário do Experience Platform. Todos os rótulos de campo do conjunto de dados existentes precisam ser migrados manualmente para os rótulos de campo do esquema até 31 de maio de 2024. Leia as [guia completo de governança de dados](../../data-governance/e2e.md) para obter mais informações sobre a migração de rótulos. |
+
+{style="table-layout:auto"}
+
+Para saber mais sobre governança de dados, leia o [visão geral da governança de dados](../../data-governance/home.md).
+
+## Assimilação de dados {#data-ingestion}
 
 O Adobe Experience Platform fornece um conjunto avançado de recursos para assimilar qualquer tipo e qualquer latência de dados. Você pode assimilar usando APIs de lote ou transmissão, usando fontes construídas em Adobe, parceiros de integração de dados ou a interface do usuário do Adobe Experience Platform.
+
+**Recursos atualizados**
 
 | Recurso | Descrição |
 | --- | --- |
 | Disponibilidade beta de modelos de assimilação de dados | Os modelos de assimilação de dados fornecem aos arquitetos e engenheiros de dados modelos padrão e ferramentas de automação para acelerar o processo de assimilação de dados, incluindo a criação de esquemas e conjuntos de dados e a configuração de regras de mapeamento. Os modelos de assimilação de dados estão disponíveis para o [[!DNL Marketo Engage]](../../sources/connectors/adobe-applications/marketo/marketo.md), [[!DNL Salesforce]](../../sources/connectors/crm/salesforce.md) e [[!DNL Microsoft Dynamics]](../../sources/connectors/crm/ms-dynamics.md) fontes. Para obter mais informações, leia o guia em [uso de modelos na interface](../../sources/tutorials/ui/templates.md). |
 
-Para obter mais informações, leia a [Visão geral da assimilação de dados](../../ingestion/home.md).
+Para saber mais sobre a assimilação de dados, leia o [visão geral da assimilação de dados](../../ingestion/home.md).
+
+## Serviço de query {#query-service}
+
+O Serviço de consulta permite usar o SQL padrão para consultar dados no Adobe Experience Platform [!DNL data lake]. Você pode unir qualquer conjunto de dados do data lake e capturar os resultados da consulta como um novo conjunto de dados para usar em relatórios, no Data Science Workspace ou para assimilação no Perfil do cliente em tempo real.
+
+**Recursos atualizados**
+
+| Recurso | Descrição |
+| --- | --- |
+| Calcular estatísticas em nível de coluna em conjuntos de dados ADLS | A variável `ANALYZE TABLE` foi estendido com o `COMPUTE STATISTICS` e `SHOW STATISTICS` Comandos SQL. Agora é possível calcular estatísticas para um subconjunto de um conjunto de dados ADLS ou para determinadas colunas nesse conjunto de dados. Para obter mais informações, leia a [guia de cálculo de estatísticas do conjunto de dados](../../query-service/essential-concepts/dataset-statistics.md). |
+
+{style="table-layout:auto"}
+
+Para saber mais sobre os Serviços de consulta, leia a [Visão geral do Serviço de consulta](../../query-service/home.md).
 
 ## Fontes {#sources}
 
@@ -35,7 +99,6 @@ O Experience Platform fornece uma API RESTful e uma interface interativa que per
 
 | Recurso | Descrição |
 | --- | --- |
-| Suporte de API para transmissão de dados de um [!DNL Snowflake] banco de dados | Agora é possível transmitir dados de um [[!DNL Snowflake] origem](../../sources/connectors/databases/snowflake.md) usando o [!DNL Flow Service] API. |
 | Suporte à API ampliada para modo de rascunho | Agora você pode pausar e salvar seu progresso durante o workflow de origens ao usar o [!DNL Flow Service] a qualquer momento. Use o `mode=draft` estado para salvar suas conexões base, de origem e de destino como rascunhos. Todas as entidades de rascunho podem ser revisitadas para conclusão posteriormente. Leia o guia em [configuração do [!DNL Flow Service] entidades para um estado de rascunho](../../sources/tutorials/api/draft.md) para obter mais informações. |
 | Disponibilidade geral do [!DNL Salesforce Marketing Cloud] origem | A variável [[!DNL Salesforce Marketing Cloud source] agora está em disponibilidade geral](../../sources/connectors/marketing-automation/salesforce-marketing-cloud.md). Use esta fonte para trazer seus [!DNL Salesforce Marketing Cloud] dados para Experience Platform. |
 | [!DNL Google Ads] atualizações de autenticação | Agora você pode fornecer uma ID de cliente de logon ao autenticar seu [!DNL Google Ads] conta de origem para buscar dados de relatório de um cliente operacional específico. Leia o [[!DNL Google Ads] documentação de origem](../../sources/connectors/advertising/ads.md) para obter mais informações. |
@@ -46,3 +109,5 @@ O Experience Platform fornece uma API RESTful e uma interface interativa que per
 {style="table-layout:auto"}
 
 Para saber mais sobre fontes, leia o [visão geral das origens](../../sources/home.md).
+
+<!-- | API support for streaming data from a [!DNL Snowflake] database | You can now stream data from a [[!DNL Snowflake] source](../../sources/connectors/databases/snowflake.md) using the [!DNL Flow Service] API. | -->
